add header to project

--- a/index.html
+++ b/index.html
@@ -11,7 +11,35 @@
 </head>
 <body>
     
-
+    <header>
+        <div class="collapse bg-dark" id="navHeader">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 py-4">
+                        <h4 class="text-white">درباره ما</h4>
+                        <p class="text-muted mt-4">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد. معمولا طراحان گرافیک برای صفحه‌آرایی، نخست از متن‌های آزمایشی و بی‌معنی استفاده می‌کنند تا صرفا به مشتری یا صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است.</p>
+                        
+                    </div>
+                    <div class="col-md-4 py-4">
+                        <h4 class="text-white">تماس با ما</h4>
+                        <ul class="list-unstyled mt-4">
+                            <li><a href="#" class="text-white">فیسبوک</a></li>
+                            <li><a href="#" class="text-white">توئیتر</a></li>
+                            <li><a href="#" class="text-white">ایمیل</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark">
+            <div class="container">
+                <h5 class="text-white mb-0">مجله آموزشی امین</h5>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navHeader">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </nav>
+    </header>
 
 
 
