--- a/index.html
+++ b/index.html
@@ -41,7 +41,21 @@
         </nav>
     </header>
 
+    <main role="main">
+        <section class="jumbotron text-center">
+            <div class="container">
+                <h2 class="jumbotron-heading">مجله آموزشی امین</h2>
+                <p class="text-muted lead">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
 
+                </p>
+                <p>
+                    <button class="btn btn-warning">مقالات</button>
+                    <button class="btn btn-danger text-white">دوره ها</button>
+                </p>
+            </div>
+    </section>
+    </main>
+    
 
 
 
