add images/ and add cards

--- a/index.html
+++ b/index.html
@@ -54,6 +54,148 @@
                 </p>
             </div>
     </section>
+    <section class="pt-4 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/php.jpg" alt="php" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش php</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>25 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/1583305013laravel-poster-1.png" alt="laravel7" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش laravel7</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/js-1.png" alt="js" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش javacscript</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/node.png" alt="node" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش nodeJS</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/sass-cover-2.jpg" alt="sass" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش sass</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/laravel-projects-2.png" alt="laravel-project" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش پروژه محور laravel</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/php-security-2.png" alt="php-security" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش امنیت در php</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/next.png" alt="js" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش NextJs</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card box-shadow mb-4">
+                        <img src="images/laravel-2.png" alt="laravel" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">آموزش laravel</h5>
+                            <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
+
+                            </p>             
+                        </div>
+                        <div class="card-footer d-flex align-items-center justify-content-between">
+                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <small>20 بهمن 1399</small>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
     </main>
     
 
