--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>25 بهمن 1399</small>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
@@ -136,13 +136,13 @@
                     <div class="card box-shadow mb-4">
                         <img src="images/laravel-projects-2.png" alt="laravel-project" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">آموزش پروژه محور laravel</h5>
+                            <h5 class="card-title">آموزش پروژه لاوراول</h5>
                             <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
 
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
@@ -151,13 +151,13 @@
                     <div class="card box-shadow mb-4">
                         <img src="images/php-security-2.png" alt="php-security" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">آموزش امنیت در php</h5>
+                            <h5 class="card-title">آموزش امنیت php</h5>
                             <p class="card-text mt-3">طراح گرافیک از این متن به عنوان عنصری از ترکیب بندی برای پر کردن صفحه و ارایه اولیه شکل ظاهری و کلی طرح سفارش گرفته شده استفاده می نماید، تا از نظر گرافیکی نشانگر چگونگی نوع و اندازه فونت و ظاهر متن باشد.
 
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
                             </p>             
                         </div>
                         <div class="card-footer d-flex align-items-center justify-content-between">
-                            <button class="btn btn-outline-primary">ادامه مطلب</button>
+                            <button class="btn btn-outline-primary"><span>ادامه مطلب</span></button>
                             <small>20 بهمن 1399</small>
                         </div>
                     </div>
