--- a/index.html
+++ b/index.html
@@ -198,7 +198,13 @@
     </section>
     </main>
     
-
+    <footer>
+        <div class="container d-flex justify-content-between py-4 flex-wrap">
+            <p class="text-muted mb-0 py-2">کليه حقوق محصولات و محتوای اين سایت متعلق به راکت می باشد</p>
+            <a href="#" class="py-2">بازگشت به بالای صفحه</a>
+        </div>
+        
+    </footer>
 
 
 
